--- a/config/database.yml
+++ b/config/database.yml
@@ -26,8 +26,8 @@ development:
   database: jobtracker_backend_development
   host: localhost
   port: 5432
-  username: kndshein
-  password: 6425
+  # username: kndshein
+  # password: 6425
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -61,7 +61,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: jobtracker_backend_test
+  database: jobtracker_backend
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
