--- a/config/database.yml
+++ b/config/database.yml
@@ -26,8 +26,8 @@ development:
   database: jobtracker_backend_development
   host: localhost
   port: 5432
-  # username: kndshein
-  # password: 6425
+  username: kndshein
+  password: 6425
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
