--- a/config/database.yml
+++ b/config/database.yml
@@ -23,11 +23,11 @@ default: &default
 
 development:
   <<: *default
-  database: jobtracker_backend_development
-  host: localhost
+  database: <%= ENV['DBNAME'] %>
+  username: <%= ENV['DBUSER'] %>
+  password: <%= ENV['DBPASS'] %>
   port: 5432
-  username: kndshein
-  password: 6425
+  host: <%= ENV['DBHOST'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
