--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,21 +8,20 @@ services:
     image: job_tracker_dev_server
     depends_on:
       - db
-    ports: 
+    ports:
       - 3000:3000
     restart: "no"
-    environment: 
-      - DBHOST=${DBHOST}
-      - DBUSER=${DBUSER}
-      - DBPASS=${DBPASS}
+    environment:
+      DBUSER: postgres
+      DBPASS: password
 
   db:
     image: postgres
     restart: "no"
-    environment: 
-       - POSTGRES_DB=${POSTGRES_DB}
-       - POSTGRES_USER=${POSTGRES_USER}
-       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    environment:
+      POSTGRES_DB: job_tracker_DB
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: password
 
     volumes:
       - development_db_data:/var/lib/postgresql/data
